--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port = 7000
+spring.datasource.url= jdbc:postgresql://localhost:5432/pms
+spring.datasource.username=postgres
+spring.datasource.password=secret1234
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security.oauth2=DEBUG
