--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=secret1234
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.springframework.security.oauth2=DEBUG
 spring.datasource.hikari.auto-commit=false
+server.max-http-header-size=10000000 
