--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=create
 logging.level.org.springframework.security.oauth2=DEBUG
 spring.datasource.hikari.auto-commit=false
 server.max-http-header-size=10000000 
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=10MB
+aes.secretKey = O8rxXAQPQtk0MSUl7ntHaffq9K+VddsW
