--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port = 7000
-spring.datasource.url= jdbc:postgresql://localhost:5432/pms
+server.port = 8080
+spring.datasource.url= jdbc:postgresql://pms.cdy2k24omzsc.ap-southeast-1.rds.amazonaws.com:5433/mcrms_db
+#spring.datasource.url= jdbc:postgresql://localhost:5432/pms
 spring.datasource.username=postgres
 spring.datasource.password=secret1234
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
